Fix channel edit button position on mobile

--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -753,6 +753,9 @@ $actions-z-index: 2;
       color: var(--color-primary);
     }
   }
+  @media (max-width: $breakpoint-small) {
+    right: var(--spacing-xs);
+  }
 }
 
 .channel__quick-actions {
